--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-select": "v2.0.0-alpha.8",
     "uuid": "^3.0.1"
   },
   "peerDependencies": {
